@@ -215,7 +215,6 @@ SysRes sys_set_tls ( ThreadId tid, Addr tlsptr )
    file, but that requires even more macro magic. */
 
 DECL_TEMPLATE (mips_linux, sys_set_thread_area);
-DECL_TEMPLATE (mips_linux, sys_vmsplice);
 DECL_TEMPLATE (mips_linux, sys_swapon);
 DECL_TEMPLATE (mips_linux, sys_swapoff);
 DECL_TEMPLATE (mips_linux, sys_setdomainname);
@@ -229,14 +228,6 @@ DECL_TEMPLATE (mips_linux, sys_mmap);
 DECL_TEMPLATE (mips_linux, sys_rt_sigreturn);
 DECL_TEMPLATE (mips_linux, sys_pipe);
 DECL_TEMPLATE (mips_linux, sys_fadvise64);
-
-PRE(sys_vmsplice)
-{
-   PRINT("sys_vmsplice ( %ld, %#" FMT_REGWORD "x, %" FMT_REGWORD "u, %ld )",
-         SARG1, ARG2, ARG3, SARG4);
-   PRE_REG_READ4(long, "sys_vmsplice", int, fdin, struct vki_iovec *, v,
-                 vki_size_t, len, int, flags);
-}
 
 PRE(sys_sched_rr_get_interval)
 {
@@ -765,7 +756,7 @@ static SyscallTableEntry syscall_main_table[] = {
    LINX_ (__NR_splice, sys_splice),
    LINX_ (__NR_sync_file_range, sys_sync_file_range),
    LINX_ (__NR_tee, sys_tee),
-   PLAX_ (__NR_vmsplice, sys_vmsplice),
+   LINXY (__NR_vmsplice, sys_vmsplice),
    LINX_ (__NR_set_robust_list, sys_set_robust_list),
    LINXY (__NR_get_robust_list, sys_get_robust_list),
    LINXY (__NR_epoll_pwait, sys_epoll_pwait),
